# FLETA_AD

ERP_Example/erp_ros/launch/: erp42_planner.launch  erp42_serial_planner.launch  path_maker.launch
ERP_Example/erp_ros/scripts/: erp42_planner.py  (+1 more)
Fleta_tracking/: CMakeLists.txt  package.xml
Fleta_tracking/include/: Fleta_tracking.h
Fleta_tracking/src/: Fleta_tracking.cpp  main.cpp
GeographicLib-1.50.1/tools/: ConicProj  GeoidEval  MagneticField  TransverseMercatorProj
Object_detection/: CMakeLists.txt  package.xml
Object_detection/include/: SC_Lidar.h
Object_detection/src/: SC_Lidar (copy).cpp  SC_Lidar.cpp  main.cpp
SC_Control/: CMakeLists.txt  package.xml
SC_Control/include/: SC_Serial.h
SC_Control/scripts/: selfcar_teleop.py
SC_Control/src/: SC_Control.cpp  SC_Message.cpp  SC_Serial.cpp  main.cpp
Serial_Control/: CMakeLists.txt  package.xml
Serial_Control/include/: Serial_Control.h  Serial_Message.h
Serial_Control/msg/: fleta_cmd.msg
Serial_Control/scripts/: fleta_teleop.py
Serial_Control/src/: Serial.cpp  Serial_Control.cpp  Serial_Message.cpp  main.cpp
adaptive_clustering-master/src/: adaptive_clustering.cpp
camera_info_manager/tests/: camera.yaml
crosswalk/: CMakeLists.txt  package.xml
crosswalk/src/: main.cpp
delivery_parking/: CMakeLists.txt  package.xml
delivery_parking/src/: main.cpp
example/: CMakeLists.txt  package.xml
example/rviz/: test.rviz
example/scripts/: planner.py  utils.py
global_path_planner/: CMakeLists.txt  package.xml
global_path_planner/launch/: gpp_final_local (copy).launch  gpp_final_local.launch  total_setting_halla.launch  total_setting_halla_imu.launch  total_setting_sim (copy).launch  total_setting_sim.launch
global_path_planner/map_data/: final_path.yaml  plain_map.yaml  region_final.yaml  region_map.yaml
global_path_planner/parking_lot/: parking_lot1.txt  parking_lot2.txt  parking_lot3.txt  parking_lot4.txt  parking_lot5.txt  parking_lot6.txt
global_path_planner/path_data/: capston.txt  final1.txt  final4.txt  final5.txt  fix.txt  p_1.txt  test_0405_3.txt  test_0410_1.txt  test_sim.txt
global_path_planner/scripts/: avoid_path.py  convariance_region_state.py  convariance_region_state.py.autosave  dijkstra.py  globa_path_publisher.py  local_costmap.py  parking_lot.py
global_path_planner/src/: gps_path_only.cpp  local_costmap (copy).cpp  local_costmap.cpp  local_costmap_190825_in_kcity.cpp  local_path_made.cpp  parking_lot.cpp  region_state_halla.cpp  region_state_publisher (copy).cpp  region_state_publisher.cpp  special_traffic_light.cpp  state_decision1.cpp  traffic_state_publisher.cpp
halla_obs/: CMakeLists.txt  package.xml
halla_obs/src/: halla_obs.cpp  main.cpp
image_size_cutter/: CMakeLists.txt  package.xml
image_size_cutter/src/: image_size_cutter_node.cpp
imu_odom/: CMakeLists.txt  package.xml
imu_odom/src/: imu2odom.cpp
kcity_ll2utm/: CMakeLists.txt  package.xml
kcity_ll2utm/path/: Cornering_1.txt  Cornering_2.txt  capston.txt  dp.txt  middle.txt  obs_1.txt  wnju1.txt  wnju_1.txt  wnju_2.txt  wnju_3.txt
kcity_ll2utm/scripts/: ll2utm_imu.py  ll2utm_only_k.py  ll2utm_only_w.py  morai_sim_k.py  path_maker.py  purepursuit.py  send_path.py
kcity_planning/: CMakeLists.txt  package.xml
kcity_planning/path/: Cornering.txt  test_0405_4.txt
kcity_planning/scripts/: 0_gps2utm.py  1_gps2_utm_heading (or).py  1_gps2_utm_heading_k.py  2_make_path.py  3_path_pub.py  5_purepursuit_advanced.py  6_path_vel_planning.py  7_fix2_utm_heading_k.py  7_fix2_utm_heading_o.py  7_fix2_utm_heading_test.py  7_fix2_utm_heading_w.py
morai_msgs/: CMakeLists.txt
morai_msgs/msg/: EgoVehicleStatus.msg  ReplayInfo.msg  ScenarioLoad.msg
opencv_line_detection/: CMakeLists.txt  package.xml
opencv_line_detection/src/: opencv_line_detect.cpp
parking_mission/: CMakeLists.txt  package.xml
parking_mission/Path/: p_1.txt  p_2.txt  parking_1.txt  parking_10.txt  parking_11.txt  parking_12.txt  parking_2.txt  parking_3.txt  parking_4.txt  parking_5.txt  parking_6.txt  parking_7.txt  parking_8.txt  parking_9.txt
parking_mission/src/: main (another copy).cpp  main (copy).cpp  main.cpp
path_point/: CMakeLists.txt  K_City_MainPath.txt  README.md  package.xml
path_point/kcity_PM0138/: A1LANE_CenterLine_0001.csv  A1LANE_CenterLine_0002.csv  A1LANE_CenterLine_0003.csv  A1LANE_CenterLine_0004.csv  A1LANE_CenterLine_0005.csv  A1LANE_CenterLine_0006.csv  A1LANE_CenterLine_0007.csv  A1LANE_CenterLine_0008.csv  A1LANE_CenterLine_0009.csv  A1LANE_CenterLine_0010.csv  A1LANE_CenterLine_0011.csv  A1LANE_CenterLine_0012.csv  A1LANE_CenterLine_0013.csv  A1LANE_CenterLine_0014.csv  A1LANE_CenterLine_0015.csv  A1LANE_CenterLine_0016.csv  A1LANE_CenterLine_0017.csv  A1LANE_CenterLine_0018.csv  A1LANE_CenterLine_0019.csv  A1LANE_CenterLine_0020.csv  A1LANE_CenterLine_0021.csv  A1LANE_CenterLine_0022.csv  A1LANE_CenterLine_0023.csv  A1LANE_CenterLine_0024.csv  A1LANE_CenterLine_0025.csv  A1LANE_CenterLine_0026.csv  A1LANE_CenterLine_0027.csv  A1LANE_CenterLine_0028.csv  A1LANE_CenterLine_0029.csv  A1LANE_CenterLine_0030.csv  A1LANE_CenterLine_0031.csv  A1LANE_CenterLine_0032.csv  A1LANE_CenterLine_0033.csv  A1LANE_CenterLine_0034.csv  A1LANE_CenterLine_0035.csv  A1LANE_CenterLine_0036.csv  A1LANE_CenterLine_0037.csv  A1LANE_CenterLine_0038.csv  A1LANE_CenterLine_0039.csv  A1LANE_CenterLine_0040.csv  (+1528 more)
path_point/src/: main.cpp
preprocesss/: CMakeLists.txt  package.xml
preprocesss/include/: preprocess.h  preprocess.h.autosave
preprocesss/src/: main.cpp  preprocess.cpp
ros_image_test/: CMakeLists.txt  package.xml
ros_image_test/include/: image_test_node.h
ros_image_test/src/: find_traffic_light_from_input_img.cpp  find_traffic_light_test.cpp  image_decompressor.cpp  image_test_node.cpp
tr_processing/: CMakeLists.txt  package.xml
tr_processing/include/: traffic_light.h
tr_processing/src/: main.cpp  traffic_light.cpp
traffic_cam/: CMakeLists.txt  package.xml
traffic_cam/launch/: zoom.launch
traffic_cam/nodes/: usb_cam_node.cpp
vectornav/params/: vn100.yaml
vectornav/src/: main.cpp
(+157 files in other folders)
